@@ -1,3 +1,12 @@
+Wed Feb  5 13:51:33 2014  Koichi Sasada  <ko1@atdot.net>
+
+	* internal.h, vm_core.h: move LIKELY/UNLIKELY/UNINITIALIZED_VAR()
+	  macros from vm_core.h to internal.h.
+
+	* string.c: remove dependency to "vm_core.h".
+
+	* common.mk: ditto.
+
 Wed Feb  5 13:29:01 2014  Koichi Sasada  <ko1@atdot.net>
 
 	* string.c (rb_str_free): use FL_TEST(str, STR_SHARED) directly
